Correção Imagem na Listagem Animais